# rocket-session

./: .dockerignore  .env.docker.example  .gitignore  .gitmessage.txt  .mcp.json  .mcp.json.example  .npmignore  LICENSE  README.md  claude.md  docker-compose.yml  package.json  preview.html  start.sh
backend/: .dockerignore  .env.example  .npmignore  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  constants.py  database.py  exceptions.py  logging.py  middleware.py  sentry.py  utils.py
backend/app/models/: __init__.py  base.py  event.py  event_types.py  file_change.py  global_settings.py  mcp_server.py  memo_block.py  message.py  session.py  session_artifact.py  tag.py  team.py  team_message.py  team_task.py  template.py  token_snapshot.py  workflow_definition.py  workflow_node.py  workspace.py  workspace_insight.py
backend/app/repositories/: __init__.py  analytics_repo.py  artifact_repo.py  base.py  event_repo.py  file_change_repo.py  mcp_server_repo.py  memo_block_repo.py  message_repo.py  search_repo.py  session_repo.py  settings_repo.py  tag_repo.py  team_message_repo.py  team_repo.py  team_task_repo.py  template_repo.py  token_snapshot_repo.py  workflow_definition_repo.py  workflow_node_repo.py  workspace_insight_repo.py  workspace_repo.py
backend/app/schemas/: analytics.py  claude_memory.py  common.py  context.py  filesystem.py  local_session.py  mcp.py  memo.py  search.py  session.py  session_analysis.py  settings.py  tag.py  team.py  template.py  usage.py  workflow.py  workflow_definition.py  workflow_node.py  workspace.py  workspace_insight.py
backend/app/services/: analytics_service.py  base.py  claude_memory_service.py  claude_runner.py  context_builder_service.py  event_handler.py  filesystem_service.py  git_service.py  github_service.py  insight_service.py  jsonl_watcher.py  local_session_scanner.py  mcp_service.py  memo_service.py  pending_questions.py  permission_mcp_server.py  search_service.py  session_analysis_service.py  session_manager.py  session_process_manager.py  settings_service.py  skills_service.py  tag_service.py  team_coordinator.py  team_message_service.py  team_service.py  team_task_service.py  template_service.py  usage_service.py  validation_service.py  websocket_manager.py  workflow_definition_service.py  workflow_node_service.py  workflow_recommender_service.py  workflow_service.py  workspace_service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260220_0001_initial_schema.py  (+37 more)
backend/tests/: conftest.py  test_analytics_service.py  test_api_endpoints.py  test_claude_memory_service.py  test_context_builder_service.py  test_database.py  test_filesystem_service.py  test_insight_context.py  test_local_session_scanner.py  test_mcp_service.py  test_permissions.py  test_session_manager.py  test_tag_service.py  test_team_service.py  test_usage_service.py  test_websocket_manager.py  test_workflow_definition_service.py  test_workflow_gate.py  test_workflow_service.py  test_workspace_service.py
cli/: index.mjs
(+723 files in other folders)
