[project]
name = "claude-code-dashboard-backend"
version = "1.0.0"
description = "Claude Code Dashboard - FastAPI Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pydantic-settings>=2.0.0",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
