[project]
name = "rocket-session-backend"
version = "1.0.0"
description = "Claude Code Dashboard - FastAPI Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pydantic-settings>=2.0.0",
    "aiofiles==24.1.0",
    "aiosqlite>=0.22.1",
    "python-multipart>=0.0.22",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]
