[project]
name = "rocket-session-backend"
version = "1.0.0"
description = "Claude Code Dashboard - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pydantic-settings>=2.0.0",
    "aiofiles==24.1.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "python-multipart>=0.0.22",
    "httpx>=0.24",
    "alembic>=1.18.4",
    "structlog>=24.0.0",
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
    "testcontainers[postgres]>=4.0",
    "ty>=0.0.19",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["app"]

[tool.ty.rules]
# 점진적 도입: 주요 규칙은 error, 서드파티 호환 문제는 warn
possibly-unresolved-reference = "warn"
unresolved-import = "warn"
invalid-type-form = "warn"
# SQLAlchemy/Starlette 제네릭 추론 한계로 false positive 발생
invalid-argument-type = "warn"
# SQLAlchemy Result.rowcount, Generic[T] 속성 해석 한계
unresolved-attribute = "warn"
# Generic[T] 상속 시 메서드 오버라이드 인식 제한
invalid-method-override = "warn"

[tool.ty.analysis]
respect-type-ignore-comments = true

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
unresolved-import = "ignore"
